# ecut

./: INSTALL.txt  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
man/: Makefile.am  Makefile.in  ecut.1
src/: Makefile.am  Makefile.in  ecut.c
